# mambajs

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  README.md  environment.yml  esbuild.config.js  jest.config.js  lerna.json  package.json  tsconfig.eslint.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: main.yml
picomamba/: build_wasm.js  build_wasm.sh  core.cpp
picomamba/includes/: picomamba_core.hpp
python/: README.md  pyproject.toml
scripts/: build_wheels.py
src/: helper.ts  index.ts  parser.ts  solver.ts  solverpip.ts  types.ts
src/conda-packages-solver/: core-wasm.ts  core.d.ts  core.wasm.d.ts  index.ts
src/dynload/: dynload.js
tests/: runner.js  test-env-linux.yml  test-env.yml  test-solver.ts  test_cli.py  tsconfig.json
unittests/: helpers.ts  runner.js  tsconfig.json
unittests/tests/conda/: test-cpp.ts  test-solver.ts  test-virtual-packages.ts
unittests/tests/format/: test-format.ts
unittests/tests/mixed/: test-create-channel-alias.ts  test-create-emscripten-4x.ts  test-create-linux.ts  test-create.ts  test-install.ts  test-install2.ts  test-remove.ts  test-solver.ts
unittests/tests/parser/: test-parse-bang.ts  test-parse-install.ts  test-parse-list.ts  test-parse-remove.ts  test-parse-unknown.ts
unittests/tests/pip/: test-error-handling.ts  test-error-handling2.ts  test-extra.ts  test-github-url-wasm32.ts  test-github-url.ts  test-pandas.ts  test-platform-support.ts  test-process-requirement.ts  test-solver.ts
