[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mambajs"
dynamic = ["version"]
description = "mambajs CLI"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = {file = "LICENSE"}

[project.scripts]
mambajs = "mambajs.cli:main"

[tool.setuptools.dynamic]
version = {attr = "mambajs._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mambajs = ["bin/*", "package.json"]
